--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ tzdata==2025.2
 gunicorn
 channels[daphne]>=4.0.0
 channels-redis>=4.0.0
+django-cloudinary-storage==0.3.0
+whitenoise==6.6.0
+cloudinary==1.36.0
