--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ CORS_ALLOWED_ORIGINS=http://localhost:4200,http://127.0.0.1:4200
 # JWT Settings
 JWT_ACCESS_TOKEN_LIFETIME=60
 JWT_REFRESH_TOKEN_LIFETIME=1440
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
